--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "timeago-react": "^3.0.2"
   },
   "scripts": {
     "start": "craco start",
