--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.1.3",
     "react-scripts": "4.0.3",
     "redux-thunk": "^2.3.0",
