--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.2.0",
     "react-loading": "^2.0.3",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
